# aiochar

./: .gitignore  LICENSE  README.rst  pyproject.toml
aiochar/: __init__.py  exceptions.py  models.py
aiochar/client/: bot.py  utils.py
aiochar/client/session/: base.py
aiochar/methods/: __init__.py  get_me.py
aiochar/utils/: token.py
docs/: exceptions.html  exceptions.md  index.html  loops.html  loops.md  models.html  models.md
docs/aiochar/: exceptions.html  models.html
docs/aiochar/client/: index.html
docs/aiochar/client/session/: index.html
docs/aiochar/methods/: index.html
docs/aiochar/types/: index.html
docs/aiochar/utils/: index.html
docs/client/: bot.html  bot.md  index.html  index.md  utils.html
docs/client/session/: base.html  base.md  index.md
docs/methods/: get_me.html  get_me.md  index.md
docs/types/: index.md
docs/utils/: index.md  token.html  token.md
