[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiochar"
version = "0.1.0"
description = "Minimal Char API wrapper"
authors = [{name="v0idsh3ll"}]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==26.1.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "yarl==1.23.0"
]